# AIAssistantsLibPackage

./: .gitignore  README.md  pyproject.toml  setup.cfg  test.py
AIAssistantsLib/: config.py  requirements.txt
AIAssistantsLib/assistants/: __init__.py  chat_assistants.py  config.py  json_assistants.py  rag_assistants.py  simple_assistants.py
AIAssistantsLib/assistants/rag_utils/: rag_utils.py  treshold_retriever.py
