[project]
name = "AIAssistantsLib"
version = "0.1.0"
description = "A utility library for AI assistants."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Georgy Volkov", email="gbvolkov@gmail.com" }
]
keywords = ["AI", "assistants", "LLM", "RAG"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"

[project.urls]
"Source" = "https://github.com/gbvolkov/AIAssistantsLibPackage"
"Tracker" = "https://github.com/gbvolkov/AIAssistantsLibPackage/issues"

# Use an array of strings instead of a table for dependencies.
[project]
dependencies = [
    "python-dotenv",
    "accelerate>=0.26.0",
    "transformers",
    "torch",
    "langchain_openai",
    "langchain_gigachat",
    "langchain_community",
    "langchainhub",
    "langchain-huggingface",
    "langchain_google_genai",
    "langchain_mistralai",
    "yandexcloud",
    "faiss-cpu",
    "nltk"
]
